# MATLAB-math

./: .gitignore  CMakeLists.txt  buildInfo.mat  default.nix  ert_main.cpp  flake.nix  gen.py  rtGetNaN.cpp  rt_nonfinite.cpp
cmake/: matlab_mathConfig.cmake.in
include/: HT09_Linear_Vehicle_Model.h  HT09_Linear_Vehicle_Model_private.h  HT09_Linear_Vehicle_Model_types.h  Tire_Model_Codegen.h  Tire_Model_Codegen_private.h  Tire_Model_Codegen_types.h  interp1_ctBBGdhl.h  look1_binlcapw.h  maximum_kQ2v6WLV.h  minimum_5X1FIofZ.h  repelem_u5I1BzYw.h  rtGetInf.h  rtGetNaN.h  rt_nonfinite.h  rtwtypes.h
src/: HT09_Linear_Vehicle_Model.cpp  HT09_Linear_Vehicle_Model_data.cpp  Tire_Model_Codegen.cpp  Tire_Model_Codegen_data.cpp  const_params.cpp  interp1_ctBBGdhl.cpp  look1_binlcapw.cpp  maximum_kQ2v6WLV.cpp  minimum_5X1FIofZ.cpp  repelem_u5I1BzYw.cpp  rtGetInf.cpp  rtGetNaN.cpp  rt_nonfinite.cpp
